updated package version and todo

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,2 @@
 * Comment all public methods
-* Extend Is-framework
--- Is().Null() and Is().Not().Null() instead of IsNull() and IsNotNull()? - to reduce listing of possible methods in edi
+* Using and GivenThat return pipeline for async test method
