--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,3 @@
 * Comment all public methods
 * Using and GivenThat return pipeline for async test method
-* Can Given be used instead of GivenThat for providing values in more cases? (Add way to access provided values where needed?)
+* Flytta upp Given till Static Spec och Using till SubjectSpec
