Fixed bug when calling Before or After in Pipeline

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,2 @@
 * Comment all public methods
-* Allow chain of method calls with And: When(_ => MethodA()).And(_ => MethodB())
-* Allow next method call in chain to use result of previous: When(_ => MethodA()).And((_, res) => MethodB(res))
-* When providing concrete class several levels down in component hierarchy, 
-  materialize all components that use that class up to the subject under test (i.e. create concrete instances instead of mocks).
+* Continuation for enumerable assertions (Has.Count followed by Has.All)
