--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,3 @@
 * Comment all public methods
+* TestCover self-returning mock
+* Restrict self-returning mock to not return self if return-value is object or task
