--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,4 @@
-* Optimization: Run all then-test methods on the same pipeline (do not create a new pipeline for each test method)
+* Separate ClassFixture class from Spec and only allow Arrange on fixture, not when/Then
 * Productivity: Auto-generate test classes from Visual Studio
   - rightclick method and generate test class "When..." in the correct folder structure (configurable)
 * Documentation: Produce "Javadoc" from code comments
