added test + TODO

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+* CollectionFixture om man vill dela mellan fler klasser
+* nullable DAteTime befire/after
+* Nullable enum Is
 * Separate ClassFixture class from Spec and only allow Arrange on fixture, not when/Then
 * Productivity: Auto-generate test classes from Visual Studio
   - rightclick method and generate test class "When..." in the correct folder structure (configurable)
