--- a/TODO.txt
+++ b/TODO.txt
@@ -1,9 +1,9 @@
-* Cast (Result.As<MyType>().MyProperty.Is(123))
 * CollectionFixture om man vill dela mellan fler klasser
-* Nullable enum Is
 * Separate ClassFixture class from Spec and only allow Arrange on fixture, not when/Then
 * Productivity: Auto-generate test classes from Visual Studio
   - rightclick method and generate test class "When..." in the correct folder structure (configurable)
 * Documentation: Produce "Javadoc" from code comments
 * Documentation: handle nested new(...) in argument list: 
   "=> When(_ => _.AddNewItem(A<CartId>(), new(A<Sku>(), A<ProductType>(), A<Price>(), A<Vat>()), A<string>()));"
+* Cast (Result.As<MyType>().MyProperty.Is(123))
+  - seems impossible in current C# version
