--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* Provide custom data generator for Enums and bools to get random values
 * CollectionFixture om man vill dela mellan fler klasser
 * Separate ClassFixture class from Spec and only allow Arrange on fixture, not when/Then
 * Productivity: Auto-generate test classes from Visual Studio
