--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,4 @@
+* Only show first five items with ellipsis if not all from collection
 * Provide custom data generator for Enums and bools to get random values
 * CollectionFixture om man vill dela mellan fler klasser
 * Separate ClassFixture class from Spec and only allow Arrange on fixture, not when/Then
